Functionlize words processing

--- a/hw1/web_scrap.ipynb
+++ b/hw1/web_scrap.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# This notebook is for testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Parse Json File"
    ]
   },
@@ -53,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tokenization"
+    "# Extract Sentence and Tokenization"
    ]
   },
   {
@@ -1115,6 +1122,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\"Introducing Elucis',\n",
+       " '\"Top 12 Python Libraries for Machine Learning and Data Science in 2020 https',\n",
+       " '\"#Deep Learning Optimized Sparse Antenna Activation for Reconfigurable Intelligent Surface Assisted Communication. (arXiv',\n",
+       " '\"Complete #Python #Developer in 2020',\n",
+       " '\"Neural Network which can detect numbers in python.\\nhttps',\n",
+       " '\"Improving on Naive Bayes with Support Vector Machines #data #science #machine #learning https',\n",
+       " '\"Let us assist with your due #finals\\n#exams\\n#Python\\n#C #programming\\n#java\\n#javascript\\n#history\\n#android\\n#artificial #intelligence\\n#machine #learning\\n#data #visualization\\n#data #analytics\\n#cost and #F.A #Accounting \\n#finance\\n#C #sharp\\n#python\\n#data #structures\\nDM for class help\"',\n",
+       " '\"#AWS launches #Amazon Kendra, #Machine #learning based #Search Service\\nhttps',\n",
+       " '\"Curious how #AI or #machine learning can help solve complex public problems? So are we! \\nHead over to our website (https',\n",
+       " '\"How To Develop a Machine Learning Model https',\n",
+       " '\"#FEATURED #COURSES\\n\\n#Machine #Learning A-Z™',\n",
+       " '\"HOW to Classify #Animal Images via ,,, Neural #Network https',\n",
+       " '\"Machine Learning and Signal Processing\\n\\n#machinelearning #Machine #Learning #fft\\nhttps',\n",
+       " '\"Happy to say that I\\'ll be working more closely with @NVIDIAEmbedded to build more intelligent robotics projects by adding their Jetson range of computing platforms. What Machine Learning projects would you like to see me attempt?\\n\\n#ad #robotics #machine #ML #jetson #ai… https',\n",
+       " '\"A very simple and useful guide to run decision tree models using #rstats \\n\\n#machine #learning #DataScience\\n#models \\n\\nhttps',\n",
+       " '\"Optimize ML model with optuna and visualize the result with MLFlow #informatics #machine\\xa0learning https',\n",
+       " '\"Machine Learning A-Z™',\n",
+       " '\"https',\n",
+       " '\"#Machine Learning the Nuclear World. \\n\\n#BigData #Analytics #DataScience #AI #IoT #IIoT #Python #RStats #TensorFlow #Java #JavaScript #ReactJS #CloudComputing #Serverless #DataScientist #Linux #Mathematics #Programming #Coding #100DaysofCode \\nhttps',\n",
+       " '\"Decision Trees for Classification #data #science #machine #learning https',\n",
+       " '\"Self-calibrated #ventilator',\n",
+       " '\"How to use PReLU with Keras? – #keras #prelu #relu #activationfunction #activation #function #neuralnetwork #neural #network #deeplearning #machinelearning #tensorflow #datascience #python #ml \\n\\nhttps',\n",
+       " '\"Dr. Basit Ali @Official_NUST in collab with @SKKU_1398 researched on developing a convolutional #neural #network-based intelligent fault protection strategy for #microgrid protection. #NUSTresearch \\n@IEEEorg @IEEEXplore @ieee_pes @CSSIEEE @ComputerSociety\\n\\nhttps',\n",
+       " '\"Star Labs has created a #neural network called Core R3 that simulates incredibly lifelike human #avatars.\\n#AI #ML #futuristic  https',\n",
+       " '\"Learn about incorporating #bias #nodes into your #neural #network.\\nhttps',\n",
+       " '\"A #neural #network approach for real-time particle/cell characterization in #microfluidic #impedance #cytometry\\nby Nathan S. Swami et al @UVA @UVAEngineers @FederikaCaselli @UTORV @unitorvergata #realtime #processing\\n\\nhttps',\n",
+       " '\"SCENE',\n",
+       " '\"Scientists have enabled the brain’s natural #neurons to communicate with artificial ones https',\n",
+       " '\"Ideas by @kjam to hack #surveillance #capitalism. @transmediale #e2e @KIM_HfG #neural #network #culture… \"',\n",
+       " '\"#Socionext #AI #Chip Integrates #Quantized #Deep #Neural #Network #Engine\\nhttps',\n",
+       " '\"#Creating a #Neural #Network from #Scratch... \\n#neuralnet #ml #dl #ai https',\n",
+       " '\"The finding establishes #neuromorphic hardware as a fast and scalable avenue to explore the impact of biological plasticity rules on #neural computation and network dynamics.\\n\\n➡️ Read more',\n",
+       " '\"Happy to share #Neural #Network-Based #Formula for the #Buckling Load #Prediction of I-Section #Cellular #Steel #Beams https',\n",
+       " '\"Researchers study why neural networks are efficient in their predictions',\n",
+       " '\"#Astronomy #Artificial #Intelligence #AI #Machine #Learning #ML #Neural #Network #DeepLearning #BigData #DataScience | A Neural Network has “re-discovered” the Copernican Principle of #HelioCentricity - but cannot predict the outco…https',\n",
+       " '\"#Neural [#Archive] From #Counterculture to #Cyberculture',\n",
+       " '\"#Neural [#Archive] THE #ETERNAL #NETWORK - THE ENDS AND BECOMINGS OF NETWORK #CULTURE - Edited by Kristoffer Gansing and Inga Luchs - @INCAmsterdam, @transmediale - https',\n",
+       " '\"Prof. Qian & Prof. Wu\\'s research team published an article in @NatureNano which shows a #neural network integrated with synapse, dendrite & soma, improving network classification accuracy. Full article',\n",
+       " '\"Physicist',\n",
+       " '\"📢 Only a few days left to apply for our Call for Expression of Interest on #neural #network models!\\n\\n➡️ Find out more',\n",
+       " '\"@MicrochipTech launched #Software Development Kit and #Neural #Network IP\\nhttps',\n",
+       " '\"#NeuroAI seminar now has a webpage with information and list of #ICML and #CVPR papers we are reading in the summer. https',\n",
+       " '\"Learning about Conditional Adversarial Networks? Visit this #CVPR paper on the topic. You\\'ll find figures and tables, citations as well as videos, code libraries, and news articles discussing its exciting applications and developments. https',\n",
+       " '\"#CVPR 2020 1/4',\n",
+       " '\"Final touches 👌😂 #CVPR #tarkkaahommaa… \"',\n",
+       " '\"This goes for all conferences. I complained about the 5 minute #CVPR talks in 2018. It’s a cool idea, but researchers dive into the technical weeds so quickly that unless you’re intimately familiar with the specific topic, you’re lost and start browsing @Twitter on your phone.… https',\n",
+       " '\"Best Paper of the Year at CVPR. Read this in-depth article from @analyticsdrift\\n\\n#cvpr #DataScience #Technology #AI #ML #ArtificialIntelligence #technews #MachineLearning #Python #ml #autoencoder \\n https',\n",
+       " '\"Tomorrow(Monday) I will spend my whole day at Minds vs. Machines #CVPR2020 workshops, hopefully, I will learn a bit about my own mind, just kidding 😉, see you there. \\nPS. This workshop is open for all zoom link and schedule are posted here',\n",
+       " '\"Extended abstracts for the #VizWiz workshop at #CVPR are now available online!\\n\\nSee',\n",
+       " '\"Check out our recent work on counting actions in the wild! Model is learned entirely unsupervised. It successfully transfers to real life video repetitions! Also check out temporal self-similarity layer which is the main secret sauce! #CVPR2020 #CVPR https',\n",
+       " '\"Join our discussion on \\'Π-nets',\n",
+       " '\"Congratulations to Shagun Uppal, Anish Madan, Sarthak Bhagat, and @RatnRajiv on getting their poster titled, \"Weakly Supervised Categoric Visual Question Generation\" accepted at the #CVPR Visual Question Answering and Dialog Workshop. \\n\\nCheck details at https',\n",
+       " '\"Work jointly led by @jiasenlu and @vedanujg. In collaboration with Marcus Rohrbach and @stefmlee. \\n\\nTo appear @cvpr2020 #CVPR #CVPR2020. \\n\\nhttps',\n",
+       " '\"Our new work --\\n\"D3VO',\n",
+       " '\"Our CVPR paper',\n",
+       " '\"CVPR 2020 paper decisions are now available, 1470 papers accepted',\n",
+       " '\"The code, pre-trained models, and datasets for #StarGANv2 is now available to everyone at https',\n",
+       " '\"Research Internship at Niantic for PhD-level students.\\n\\nCome to London or Sunnyvale, do a research project with us and submit a paper to #CVPR or similar.\\n\\nhttps',\n",
+       " '\"AI makes blurry faces look 64 times sharper https',\n",
+       " '\"Definitely one of my favorite #CVPR presentations so far',\n",
+       " '\"#Deep Learning Based Antenna Selection for Channel Extrapolation in FDD Massive MIMO. (arXiv',\n",
+       " '\"I’m honored to share the 2020 Longuet-Higgins prize with @DeqingSun and Stefan Roth. It is given at #CVPR2020 for work from #CVPR 2010 that has withstood the test of time. I’ve written a blog post about the secrets behind “The Secrets of Optical Flow”',\n",
+       " '\"#NASA taps #Nvidia #GPUs to predict #solar #flares with cutting-edge #deep #learning https',\n",
+       " '\"A Detection of Informal Abbreviations from Free Text #Medical Notes Using #Deep Learning. Read full info at https',\n",
+       " '\"Intel engineers helps develop #Deep-learning pipeline on #Xeon processors, aiming to expand #scalability & #performance. #IAmIntel https',\n",
+       " '\"#Newpaper [Article] Semi-Supervised Adversarial Variational Autoencoder\\n\\nhttps',\n",
+       " '\"Five Successful AI and ML Use Cases In Manufacturing https',\n",
+       " '\"Face Recognition with Deep Learning #data #science #deep #learning #python https',\n",
+       " '\"Learning is one of our favorite things about fly fishing!  Always something new to learn about the water we fish, the species we fish for, or us as fly fishers. #deep… https',\n",
+       " '\"Computer Vision',\n",
+       " '\"Image Data Prep for Deep Learning Model #data #science #deep #learning #python https',\n",
+       " '\"#Deep Learning in Mapping for Autonomous Driving 📊 #DataScience 🧮 #DataVisualization #DataAnalytics #DataFam https',\n",
+       " '\"#camvid should be a toy example for #deep #learning in #semantic #segmentation ... I will give the #dataset to the public. I have searched the internet extensively to gather it. Soon I will write about it in my web page and give the @GoogleColab code for it.\"',\n",
+       " '\"#Vacancy tenure-track assistant #professor in #computer #vision and #deep #learning at Atlas lab at University of #Amsterdam, a collaboration with TomTom. https',\n",
+       " '\"#Deep #learning AI model compression - Catering to the #edge https',\n",
+       " '\"Data Scientist - Leader #MA #Jobs #Data #Scientist #Science #Leader #AI #algorithms #deep #machine #learning #Python https',\n",
+       " '\"Our manuscript provides a summary of current techniques in #3Dprinting, #computational #modeling and #deep #learning in structural heart disease for improved therapy planning. #cardiotwitter… https',\n",
+       " '\"SPARKLES OF THE SEASON - Four people rediscover the magic of Christmas, with a New Year’s surprise https',\n",
+       " '\"😷 [Perspectives] An activist history of drug shortages and its silos 👉 https',\n",
+       " '\"#49568_नियुक्ति_2चरण_में_कराओ\\nएकता में शक्ति है..\\nunited we stand divided we fall..\\nrise, join stand together and raise your voice... \\n#medical #training #49568_नियुक्ति_2चरण_में_कराओ\\n#medicalkarwao #joiningdoo\\n@myogiadityanath @dgpup @Uppolice @UPGovt\"',\n",
+       " '\"7Th #international Multidisciplinary #Congress on Good #Medical #Research. \\nPlease join us! Visit our website. https',\n",
+       " '\"Students Are VIP 🖤\\n\\nDon\\'t forget to share with us Your photos by sending thim DM or using our Hashtag #iamdarscruber \\n\\n#medicine #doctor #medical #health #covid #healthcare #nurse #medstudent #doctors #surgery… https',\n",
+       " '\"😷 [Articles] Mifepristone and misoprostol versus misoprostol alone for the management of missed miscarriage (MifeMiso)',\n",
+       " '\"❤️❤️❤️🆘🆘🆘🆘 “Puddin” just shouldin b 👀thru bars! Hes just a baby! Pls RT him! Puddin shld bmuddin w/a boy to play with &a cozy 🛏2sleep on! #medical #pledgesneeded @pearl_ober @hayley_Core_V @unicorndreams99 @sherian_holt @mgellis @Stacey5899 @MimisMemphisPet @TherealBethO… https',\n",
+       " '\"Insomnia identified as a new risk factor for type 2 diabetes. #Insomnia #Diabetes #Health #Medical #𝔊𝕯𝔏𝔈    \\nhttps',\n",
+       " '\"We\\'ll help you get your #medicalmarijuana card! Visit us at https',\n",
+       " '\"मानवता सर्वोपरि\\n\\n#IndianArmy extends help and #Medical assistance to stranded #Chinese citizens at the India - China Border of #NorthSikkim at altitude of 17,500 feet under extreme climatic conditions. \\n\\nFor #IndianArmy #Humanity is foremost\\n\\n#HumanValues\\n#IndianArmy\\n#NationFirst… https',\n",
+       " '\"😷 [Obituary] Peter Byass 👉 https',\n",
+       " '\"Is she in love with hockey, fame, or him? BEYOND THE FACE-OFF\\nhttps',\n",
+       " '\"Gika Health will provide fundamental #medical care and cutting-edge #medicine under different brands. Treat a wide range of #health issues, taking a personal touch and utilizing highly specialized and up-to-date research.\"',\n",
+       " '\"coming soon ! #apple #health #medical #science #… \"',\n",
+       " '\"World’s First Portable #MRI Machine Can Be Rolled Up To A Patient\\'s Bedside. #MachineLearning #MedicalTech #Tech #Technology #Medical #MedicalImaging #Health #𝔊𝕯𝔏𝔈 \\nhttps',\n",
+       " '\"Glucose Control Is difficult For Teens To Maintain.\\n#Diabetes #Pediatrics #Health #Teens #Medical #𝔊𝕯𝔏𝔈  \\nhttps',\n",
+       " '\"Most effective way for me to study origins and insertions - definitely a visual and tactile learner! \\n\\nHow do other #anatomy or #medical students do this effectively? Any tips?\\n\\n#anatomists @OpenAcademics @AcademicChatter #AcademicTwitter #AcademicChatter… https',\n",
+       " '\"We want new medicine faster, safer and smarter. \\n\\nhttps',\n",
+       " '\"Looking at some old #research papers and #medical #illustrations. #Parotid surgery is the perfect combo of intricate operative technique, aesthetic, oncology, and recon.  Plus I love the way the facial nerve looks! #surgery #Ent #AllDay #purpose @MayoClinicENT @MayoClinic… https',\n",
+       " '\"Analytical Model of #Electron Density and Its #Machine Learning Inference \\nhttps',\n",
+       " '\"High End Photoshop Portrait Retouch\\nMy Services',\n",
+       " '\"Stephen Richards.- #quote #image via https',\n",
+       " '\"Sacramento Photographers #SPG #WPC 372 Winner Vince Brashear. Theme \"Bicolored Item\"\\nhttps',\n",
+       " '\"NBA',\n",
+       " '\"Buddha.- #quote #image Via https',\n",
+       " '\"Robert Green Ingersoll.- #quote #image Via https',\n",
+       " '\"When I make my art... #thirdeye #artist #present #past #future #selfie #portrait #edited #image #self #alchemy #passion #creator #5d https',\n",
+       " '\"Steve Jobs.- #quote #image Via https',\n",
+       " '\"#MadVerse prompt - greetings #inkslingers\\n\\nLet the images inspire your words or use',\n",
+       " '\"https',\n",
+       " '\"William Morris.- #quote #image Via https',\n",
+       " '\"Dwayne Johnson \"The Rock\" #quote #image https',\n",
+       " '\"Chris Brogan.- #quote #image https',\n",
+       " '\"Caterina Fake.- #quote #image https',\n",
+       " '\"George Orwell.- #quote #image Via https',\n",
+       " '\"Watch this tutorial for \\nhttps',\n",
+       " '\"How to Optimize your Image - https',\n",
+       " '\"J.K. Rowling #quote #image https',\n",
+       " '\"Henry Adams.- #quote #image Via https',\n",
+       " '\"The Face in the Bush by John M Bailey. Walking along a trail in the Florida wetlands we came across this. Gulp! #Faces #image #photoart… https']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1266,7 +1409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1379,7 +1522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
